--- a/src/Tempus.Tests/Tempus.Tests.csproj
+++ b/src/Tempus.Tests/Tempus.Tests.csproj
@@ -1,11 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <LangVersion>Latest</LangVersion>
   </PropertyGroup>
@@ -18,7 +15,6 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Tempus\Tempus.csproj" />
   </ItemGroup>
